--- a/index.html
+++ b/index.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title> Okubalu Ebuka | WDD 130 </title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Okubalu Ebuka | WDD 130</h1>
+        <img src="images/profile.jpeg" alt="Hello, my name is Okubalu Ebuka" width="200">
+        <p>Okubalu Ebuka is a dedicated student from Anambra, Nigeria currently pursuing a degree in
+            Web
+            Design and
+            Development (WDD) at Brigham Young University–Idaho through the BYU Pathway program.
+            Passionate
+            about technology and creative problem-solving, Okubalu enjoys exploring innovative
+            approaches to web
+            development and digital design.</p>
+        <p>In addition to academic pursuits, Okubalu is an avid traveler and enjoys discovering new
+            cultures,
+            which inspires creativity and broadens perspectives. He is also a keen reader,
+            constantly seeking
+            knowledge across a range of subjects to enhance both personal growth and professional
+            skills.</p>
+        <p>Okubalu is committed to lifelong learning, embracing challenges, and contributing
+            meaningfully to
+            the digital and global community.</p>
+    </main>
+    <footer>
+        <p>&copy; 2026 🦅 Okubalu Ebuka 🦅 Anambra, Nigeria</p>
+    </footer>
 </body>
+
 </html>
