--- a/week02/temple.html
+++ b/week02/temple.html
@@ -38,7 +38,7 @@
         </section>
     </main>
     <footer>
-        <p>Temple Card - Your Name</p>
+        <p>Temple Card - Okubalu Prince Ebuka</p>
     </footer>
 </body>
 
