--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Okubalu Ebuka">
     <title> Okubalu Ebuka | WDD 130 </title>
 </head>
 
