--- a/wwr/about.html
+++ b/wwr/about.html
@@ -25,7 +25,7 @@
 
     <main>
         <div class="hero">
-            <img src="images/hero.jpg" alt="Rafting adventure">
+            <img src="images/hero.webp" alt="Rafting adventure">
             <h1>White Water Rafting</h1>
 
             <article>
